# jsonl-trim

./: .gitignore  AGENTS.md  Cargo.toml  README.md
skill/: SKILL.md
src/: main.rs
