[package]
name = "jsonl-trim"
version = "1.0.0"
edition = "2024"
description = "Trim oversized lines and string fields in JSONL files"
license = "MIT"
repository = "https://github.com/rcash/jsonl-trim"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
walkdir = "2"
glob = "0.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
